--- a/tests/signal/BasicMicArray/CMakeLists.txt
+++ b/tests/signal/BasicMicArray/CMakeLists.txt
@@ -1,84 +1,32 @@
+cmake_minimum_required(VERSION 3.21)
+include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
+project(tests-signal-basicmicarray)
 
-set( APP_NAME tests-signal-basicmicarray )
+set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../../..)
 
-set( TARGET_XN   XVF3610_Q60A.xn )
+include(${CMAKE_CURRENT_LIST_DIR}/../../../examples/deps.cmake)
 
-add_custom_target( ${APP_NAME} )
-add_dependencies( tests-signal  ${APP_NAME} )
+set(APP_HW_TARGET       XVF3610_Q60A.xn)
 
-get_filename_component(XSCOPE_CONFIG config.xscope ABSOLUTE)
+foreach(N_MICS  1 2 4 8)
+    foreach(USE_ISR   1 0)
+        foreach(FRAME_SIZE   1 16)
+            set(CONFIG "${N_MICS}ch_${FRAME_SIZE}smp_${USE_ISR}isr")
+            message(${CONFIG})
+            set(APP_COMPILER_FLAGS_${CONFIG}    -O2
+                                                -g
+                                                -report
+                                                -mcmodel=large
+                                                -Wno-xcore-fptrgroup
+                                                -Wno-unknown-pragmas
+                                                -Wno-format
+                                                -DCHAN_COUNT=${N_MICS}
+                                                -DSAMPLES_PER_FRAME=${FRAME_SIZE}
+                                                -DUSE_ISR=${USE_ISR}
+                                                )
+        endforeach()
+    endforeach()
+endforeach()
 
-set(APP_COMPILE_FLAGS
-  "${CMAKE_CURRENT_SOURCE_DIR}/${TARGET_XN}"
-  "${XSCOPE_CONFIG}" 
-  "-fxscope"
-  "-mcmodel=large"
-  "-Wno-xcore-fptrgroup"
-  "-Wno-unknown-pragmas"
-  "-Wno-format"
-  "-g"
-  "-O2"
-)
+XMOS_REGISTER_APP()
 
-set(APP_LINK_FLAGS ${APP_COMPILE_FLAGS} ) 
-list( APPEND  APP_LINK_FLAGS  "-report"                     )
-
-set( APP_INCLUDES  "src" )
-
-file( GLOB_RECURSE APP_SOURCES 
-    "src/*.c" 
-    "src/*.xc" 
-    "src/*.cpp" )
-
-macro( create_target    MICS    FRAME_SIZE    USE_ISR )
-
-  set( TARG_NAME  "${APP_NAME}_${MICS}ch_${FRAME_SIZE}smp_${USE_ISR}" )
-
-  add_executable( ${TARG_NAME} )
-
-  target_compile_options( ${TARG_NAME}
-  PRIVATE ${APP_COMPILE_FLAGS} )
-
-  target_link_options( ${TARG_NAME}
-  PRIVATE ${APP_LINK_FLAGS} )
-
-  target_sources( ${TARG_NAME} 
-  PRIVATE ${APP_SOURCES} )
-
-  target_include_directories( ${TARG_NAME}
-  PRIVATE ${APP_INCLUDES} )
-
-  target_link_libraries( ${TARG_NAME}
-    lib_xcore_math
-    lib_mic_array )
-
-  target_compile_definitions( ${TARG_NAME}
-    PRIVATE "CHAN_COUNT=${MICS}"
-            "SAMPLES_PER_FRAME=${FRAME_SIZE}"
-            "USE_ISR=${USE_ISR}"
-  )
-
-  add_dependencies( ${APP_NAME}  ${TARG_NAME} )
-endmacro()
-
-
-# Application parameters
-#                   Mics    Frame Size    ISR
-create_target(      1       1             0         )
-create_target(      1       16            0         )
-create_target(      2       1             0         )
-create_target(      2       16            0         )
-create_target(      4       1             0         )
-create_target(      4       16            0         )
-create_target(      8       1             0         )
-create_target(      8       16            0         )
-create_target(      8       64            0         )
-create_target(      1       1             1         )
-create_target(      1       16            1         )
-create_target(      2       1             1         )
-create_target(      2       16            1         )
-create_target(      4       1             1         )
-create_target(      4       16            1         )
-create_target(      8       1             1         )
-create_target(      8       16            1         )
-create_target(      8       64            1         )
