--- a/tests/signal/CMakeLists.txt
+++ b/tests/signal/CMakeLists.txt
@@ -2,3 +2,4 @@ cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project("mic_array_signal_tests")
 add_subdirectory("BasicMicArray")
+add_subdirectory("TwoStageDecimator")
