Add XS2 build target (failing test currently)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,4 +8,5 @@ else()
     project(mic_array_tests_xccm)
     add_subdirectory(signal)
     add_subdirectory(unit)
+    add_subdirectory(test_xs2_benign)
 endif()
