FIx occasional s2 test failure

--- a/tests/test_xs2_benign/CMakeLists.txt
+++ b/tests/test_xs2_benign/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(demo)
+project(xs2)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
