--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-# python_version 3.10
+# python_version 3.12.1
 
-pytest
-pytest-xdist
-numpy
-scipy
-matplotlib
-
+pytest==8.3.2
+pytest-xdist==3.6.1
+numpy==1.23.1
+scipy==1.9.0
+matplotlib==3.5.2
