--- a/settings.yml
+++ b/settings.yml
@@ -7,14 +7,14 @@ version: 5.5.0
 documentation:
   exclude_patterns_path: doc/exclude_patterns.inc
   substitutions_path: doc/substitutions.inc
-  root_doc: doc/programming_guide/index.rst
+  root_doc: doc/rst/lib_mic_array.rst
   linkcheck_ignore_regex: ['']
   cognidox_part_number: XM-010267-UG
   doxygen_projects:
     lib_mic_array:
       doxyfile_path: doc/Doxyfile.inc
   pdfs:
-    doc/programming_guide/index.rst:
+    doc/rst/lib_mic_array.rst:
       pdf_title: '{{title}}'
       pdf_filename: '{{lib_name}}_v{{version}}'
     README.rst:
