--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -2,6 +2,8 @@
 
 pytest==8.3.2
 pytest-xdist==3.6.1
-numpy==2.0.1
-scipy==1.14.0
-matplotlib==3.9.0
+numpy==2.1.1
+scipy==1.14.1
+matplotlib==3.9.2
+
+-e ../python
