Remove vanilla API and add a new API as the default way of using the mic array
- Renamed vanilla functions
- Extend mic_array_init() to accept output sampling freq. Supported values 16, 32 and 48KHz
- Added shutdown support by notifying ChannelFrameTransmitter over the channel and ensuring threads
  are stopped in the right order
- general cleanup
- Moved helper functions to mic_array_task_internal.hpp
- Move clearing of KEDI into mic_array_start()
- Fix frame transfer to close channel connection after every frame transfer
- Add ma_shutdown() API

--- a/lib_mic_array/CMakeLists.txt
+++ b/lib_mic_array/CMakeLists.txt
@@ -8,28 +8,28 @@ file( GLOB_RECURSE    MIC_ARRAY_ASM_SOURCES     ${MIC_ARRAY_PATH}/src/*.S   )
 
 ## Compile flags
 unset(MIC_ARRAY_COMPILE_FLAGS)
-list( APPEND  MIC_ARRAY_COMPILE_FLAGS     
-              -Wno-unused-variable 
+list( APPEND  MIC_ARRAY_COMPILE_FLAGS
+              -Wno-unused-variable
               -Wno-missing-braces
               -Wno-xcore-fptrgroup
               -O2 -g
 )
 
 # Includes
-set( MIC_ARRAY_INCLUDES     ${MIC_ARRAY_PATH}/api           )
+set( MIC_ARRAY_INCLUDES     ${MIC_ARRAY_PATH}/api ${MIC_ARRAY_PATH}/src)
 
 unset(MIC_ARRAY_SOURCES)
-list( APPEND  MIC_ARRAY_SOURCES   ${MIC_ARRAY_C_SOURCES} 
-                                  ${MIC_ARRAY_XC_SOURCES}  
-                                  ${MIC_ARRAY_CPP_SOURCES} 
+list( APPEND  MIC_ARRAY_SOURCES   ${MIC_ARRAY_C_SOURCES}
+                                  ${MIC_ARRAY_XC_SOURCES}
+                                  ${MIC_ARRAY_CPP_SOURCES}
                                   ${MIC_ARRAY_ASM_SOURCES} )
 
-set_source_files_properties( ${MIC_ARRAY_XC_SOURCES}  PROPERTIES LANGUAGE C   ) 
+set_source_files_properties( ${MIC_ARRAY_XC_SOURCES}  PROPERTIES LANGUAGE C   )
 
 ## Apply compile flags
 foreach(COMPILE_FLAG ${MIC_ARRAY_COMPILE_FLAGS})
-  set_source_files_properties( ${MIC_ARRAY_SOURCES} 
-        PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG}) 
+  set_source_files_properties( ${MIC_ARRAY_SOURCES}
+        PROPERTIES COMPILE_FLAGS ${COMPILE_FLAG})
 endforeach()
 
 
