Added test for shutdown. Modified ma_shutdown() to only return once mic array threads exit.
- Update changelog

--- a/examples/app_mic_array/CMakeLists.txt
+++ b/examples/app_mic_array/CMakeLists.txt
@@ -14,8 +14,8 @@ foreach( N_MICS  1 2 )
                                         -report
                                         -mcmodel=large
                                         -DMIC_ARRAY_CONFIG_MIC_COUNT=${N_MICS}
-                                        -DMIC_ARRAY_CONFIG_MCLK_FREQ=24576000
-                                        -DMIC_ARRAY_CONFIG_PDM_FREQ=3072000
+                                        -DMCLK_FREQ=24576000
+                                        -DPDM_FREQ=3072000
                                         -DMIC_ARRAY_CONFIG_SAMPLES_PER_FRAME=16
                                         -DMIC_ARRAY_CONFIG_USE_DDR=1
                                         -DAPP_NAME="MIC_ARRAY_${CONFIG}")
