--- a/examples/app_mic_array/CMakeLists.txt
+++ b/examples/app_mic_array/CMakeLists.txt
@@ -5,27 +5,25 @@ project(app_mic_array)
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
 include(${CMAKE_CURRENT_LIST_DIR}/../deps.cmake)
-set(APP_HW_TARGET           XVF3610_Q60A.xn)
+set(APP_HW_TARGET XK-VOICE-L71.xn)
 
-foreach( N_MICS  1 2 )
-    set(CONFIG ${N_MICS}_MIC)
-    set(APP_COMPILER_FLAGS_${CONFIG}    -Os
-                                        -g
-                                        -report
-                                        -mcmodel=large
-                                        -DMIC_ARRAY_CONFIG_MIC_COUNT=${N_MICS}
-                                        -DMCLK_FREQ=24576000
-                                        -DPDM_FREQ=3072000
-                                        -DMIC_ARRAY_CONFIG_SAMPLES_PER_FRAME=16
-                                        -DMIC_ARRAY_CONFIG_USE_DDR=1
-                                        -DAPP_NAME="MIC_ARRAY_${CONFIG}")
+set(NAME_MAP thread;isr)
+foreach(N_MICS  1 2)
+    foreach(USE_ISR   1 0)
+        list(GET NAME_MAP ${USE_ISR} tmp)
+        set(CONFIG "${N_MICS}mic_${tmp}")
+
+        set(APP_COMPILER_FLAGS_${CONFIG}    -Os
+                                            -g
+                                            -report
+                                            -mcmodel=large
+                                            -DBOARD_SUPPORT_BOARD=XK_VOICE_L71
+                                            -DAPP_NAME="MIC_ARRAY_${CONFIG}"
+                                            -DMIC_ARRAY_CONFIG_USE_PDM_ISR=${USE_ISR}
+                                            -DMIC_ARRAY_CONFIG_MIC_COUNT=${N_MICS})
+    endforeach()
 endforeach()
 
-# Manually set sources as we take from the common directory too
-file(GLOB_RECURSE APP_C_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}  "src/*.c" "../common/src/*.c")
-file(GLOB_RECURSE APP_XC_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR}  "src/*.xc" "../common/src/*.xc")
-file(GLOB_RECURSE APP_ASM_SRCS RELATIVE ${CMAKE_CURRENT_LIST_DIR} "../common/src/*.S")
-
-set(APP_INCLUDES    src ../common/src ../common/util)
+set(APP_INCLUDES    src)
 
 XMOS_REGISTER_APP()
