--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,5 +3,6 @@ include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(mic_array_examples)
 add_subdirectory(app_mic_array)
 add_subdirectory(app_prefab)
+add_subdirectory(app_shutdown)
 add_subdirectory(app_par_decimator)
 add_subdirectory(app_measure_mips)
