Add tests to profile the mic_array's memory and MIPS.
These tests autogenerate the MIPS and memory usage tables that are included in the
documentation.
They also compare the MIPS and memory against committed reference json files and
flag any deviation above a threshold.
Run with pytest --update to update the reference json and rst files in case an
update is required.

--- a/tests/signal/CMakeLists.txt
+++ b/tests/signal/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory("shutdown")
 add_subdirectory("pdmrx_isr")
 add_subdirectory("BasicMicArray")
 add_subdirectory("TwoStageDecimator")
+add_subdirectory("profile")
