Extended BasicMicArray tests to test the custom filter build as well
- Added support in stage1.py, stage2.py and combined.py to output the filters in a .h file
- Added support in BasicMicArray test app CMakeLists.txt to autogenerate the custom filter header
file from the pkl file
- Remove num_mics from decimator and pdmrx conf (not needed for the custom filter feature

--- a/tests/signal/BasicMicArray/CMakeLists.txt
+++ b/tests/signal/BasicMicArray/CMakeLists.txt
@@ -29,15 +29,59 @@ math(EXPR NUM_FRAME_SIZE "${NUM_FRAME_SIZE} - 1")
 math(EXPR NUM_USE_ISR "${NUM_USE_ISR} - 1")
 math(EXPR NUM_SAMP_FREQ "${NUM_SAMP_FREQ} - 1")
 
-foreach(i RANGE 0 ${NUM_N_MICS})
-    string(JSON N_MICS GET ${N_MICS_LIST} ${i})
-    foreach(j RANGE 0 ${NUM_FRAME_SIZE})
-        string(JSON FRAME_SIZE GET ${FRAME_SIZE_LIST} ${j})
-        foreach(k RANGE 0 ${NUM_USE_ISR})
-            string(JSON USE_ISR GET ${USE_ISR_LIST} ${k})
-            foreach(l RANGE 0 ${NUM_SAMP_FREQ})
-                string(JSON SAMP_FREQ GET ${SAMP_FREQ_LIST} ${l})
-                set(CONFIG "${N_MICS}ch_${FRAME_SIZE}smp_${USE_ISR}isr_${SAMP_FREQ}fs")
+# Count how many SAMP_FREQ entries are custom (.pkl)
+set(CUSTOM_PKL_COUNT 0)
+foreach(idx RANGE 0 ${NUM_SAMP_FREQ})
+    string(JSON SF GET ${SAMP_FREQ_LIST} ${idx})
+    if (SF MATCHES "\\.pkl$")
+        math(EXPR CUSTOM_PKL_COUNT "${CUSTOM_PKL_COUNT} + 1")
+    endif()
+endforeach()
+
+if (CUSTOM_PKL_COUNT GREATER 1)
+    message(FATAL_ERROR "Only one custom filter (.pkl) in test_params.json is supported at a time. Found ${CUSTOM_PKL_COUNT}.")
+endif()
+
+set(AUTOGEN_OUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/autogen")
+
+foreach(l RANGE 0 ${NUM_SAMP_FREQ})
+    string(JSON SAMP_FREQ GET ${SAMP_FREQ_LIST} ${l})
+    if (SAMP_FREQ MATCHES "\\.pkl$")
+        # SAMP_FREQ specifying custom filter as .pkl value
+        set(PKL_FILE "${SAMP_FREQ}")
+        set(GEN_HDR  "${AUTOGEN_OUT_DIR}/custom_filter.h")
+
+        add_custom_command(
+            OUTPUT "${GEN_HDR}"
+            COMMAND ${CMAKE_COMMAND} -E echo "Generating ${GEN_HDR} from ${PKL_FILE}"
+            COMMAND python3 "${XMOS_SANDBOX_DIR}/lib_mic_array/python/combined.py"
+                    "${PKL_FILE}" -fp "custom_filter" -fd "${AUTOGEN_OUT_DIR}"
+            DEPENDS "${PKL_FILE}" "${XMOS_SANDBOX_DIR}/lib_mic_array/python/combined.py"
+            WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}"
+            COMMENT "Auto-generating custom_filter.h for ${PKL_FILE}"
+            VERBATIM)
+
+        # Tie the generation to a per-config target so it runs before build
+        add_custom_target(gen_custom_filter DEPENDS "${GEN_HDR}")
+    endif()
+
+    foreach(i RANGE 0 ${NUM_N_MICS})
+        string(JSON N_MICS GET ${N_MICS_LIST} ${i})
+        foreach(j RANGE 0 ${NUM_FRAME_SIZE})
+            string(JSON FRAME_SIZE GET ${FRAME_SIZE_LIST} ${j})
+            foreach(k RANGE 0 ${NUM_USE_ISR})
+                string(JSON USE_ISR GET ${USE_ISR_LIST} ${k})
+                if (SAMP_FREQ MATCHES "\\.pkl$")
+                    set(USE_CUSTOM_FILT 1)
+                    set(APP_SAMP_FREQ 0)
+                    set(CONFIG "${N_MICS}ch_${FRAME_SIZE}smp_${USE_ISR}isr_customfs")
+                else()
+                    set(USE_CUSTOM_FILT 0)
+                    set(APP_SAMP_FREQ ${SAMP_FREQ})
+                    set(CONFIG "${N_MICS}ch_${FRAME_SIZE}smp_${USE_ISR}isr_${SAMP_FREQ}fs")
+                endif()
+
+
                 message(${CONFIG})
                 set(APP_COMPILER_FLAGS_${CONFIG}    -O2
                                                     -g
@@ -51,12 +95,21 @@ foreach(i RANGE 0 ${NUM_N_MICS})
                                                     -DMIC_ARRAY_CONFIG_MIC_COUNT=${N_MICS}
                                                     -DMIC_ARRAY_CONFIG_MIC_IN_COUNT=${N_MICS}
                                                     -DMIC_ARRAY_CONFIG_USE_DC_ELIMINATION=0
-                                                    -DAPP_SAMP_FREQ=${SAMP_FREQ}
+                                                    -DAPP_SAMP_FREQ=${APP_SAMP_FREQ}
+                                                    -DUSE_CUSTOM_FILTER=${USE_CUSTOM_FILT}
                                                     )
             endforeach()
         endforeach()
     endforeach()
 endforeach()
 
+set(APP_INCLUDES src ${AUTOGEN_OUT_DIR})
+
 XMOS_REGISTER_APP()
+
+foreach(target ${APP_BUILD_TARGETS})
+    if (target MATCHES "customfs$")
+        add_dependencies(${target} gen_custom_filter)
+    endif()
+endforeach()
 
