Added documentation for custom filter
- Modified mic_array_decimator_conf_t to have a mic_array_filter_conf_t pointer and num_filter_stages, to
avoid having a MAX_FILTER_STAGES type limitation.
- Renamed some fields in the decimator and pdmrx conf to be more descriptive
- Renamed app_mic_array_custom_filter to app_custom_filter
- Renamed state_size to state_words_per_channel
- Renamed Init_new() back to Init()

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ project(mic_array_examples)
 add_subdirectory(app_mic_array)
 add_subdirectory(app_shutdown)
 add_subdirectory(app_par_decimator)
+add_subdirectory(app_custom_filter)
