--- a/examples/app_custom_filter/CMakeLists.txt
+++ b/examples/app_custom_filter/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(app_mic_array_custom_filter)
+project(app_custom_filter)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
