--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -7,7 +7,15 @@ set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 set(APP_HW_TARGET           XK-EVK-XU316)
 set(APP_INCLUDES src)
 set(APP_DEPENDENT_MODULES "lib_mic_array" "lib_unity(2.5.2)")
-set(APP_COMPILER_FLAGS              -O2
+set(APP_BUILD_ARCH xs3a) #TODO needed for xcore math
+
+# conditional depending on target
+include(CheckSymbolExists)
+check_symbol_exists(__xcore__ "" __XCORE__)
+
+if(__XCORE__) # xs3
+    set(APP_HW_TARGET               XK-EVK-XU316)
+    set(APP_COMPILER_FLAGS          -O2
                                     -g
                                     -report
                                     -mcmodel=large
@@ -17,5 +25,11 @@ set(APP_COMPILER_FLAGS              -O2
                                     -Wno-format
                                     -fxscope
                                     -DUNITY_INCLUDE_CONFIG_H=1)
+else() # vx4
+    set(APP_HW_TARGET               XK-EVK-XU416)
+    set(APP_COMPILER_FLAGS  
+                                    -Os 
+                                    -g)
+endif()
 
 XMOS_REGISTER_APP()
