--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -7,7 +7,6 @@ set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 set(APP_HW_TARGET           XK-EVK-XU316)
 set(APP_INCLUDES src)
 set(APP_DEPENDENT_MODULES "lib_mic_array" "lib_unity(2.5.2)")
-set(APP_BUILD_ARCH xs3a) #TODO needed for xcore math
 
 # conditional depending on target
 include(CheckSymbolExists)
@@ -29,7 +28,12 @@ else() # vx4
     set(APP_HW_TARGET               XK-EVK-XU416)
     set(APP_COMPILER_FLAGS  
                                     -Os 
-                                    -g)
+                                    -g
+                                    -Wfptrgroup
+                                    -ffunction-sections
+                                    -fdata-sections
+                                    -Wl,--gc-sections
+                                    )
 endif()
 
 XMOS_REGISTER_APP()
