Fix inline assembly instruction for VX4 architecture in mic_array_inpw8 function Add compiler flag to suppress function pointer group warnings in unit tests

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -32,6 +32,7 @@ else() # vx4
     set(APP_COMPILER_FLAGS  
                                     -Os 
                                     -g
+                                    -Wno-fptrgroup
                                     -DUNITY_INCLUDE_CONFIG_H=1)
 endif()
 
