--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(mic_array_examples)
 add_subdirectory(app_mic_array)
+add_subdirectory(app_mic_array_basic)
 add_subdirectory(app_shutdown)
 add_subdirectory(app_par_decimator)
 add_subdirectory(app_custom_filter)
