Update .gitignore and enhance app_mic_array_basic: add mic_array_output.bin to ignore list, refactor convert.py to use APP_OUT_FREQ_HZ, create app_config.h and small_768k_to_12k_filter.h, and improve unit tests in test_fir_1x16_bit.c

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ build.xcore
 # Python cache information
 lib_mic_array.egg-info
 examples/app_mic_array_basic/output.wav
+examples/app_mic_array_basic/mic_array_output.bin
