This is a safety commit.  These files do not build successfully.  device_pll_ctrl.c is known to be incomplete.

--- a/examples/app_mic_array_basic_xcore_400/CMakeLists.txt
+++ b/examples/app_mic_array_basic_xcore_400/CMakeLists.txt
@@ -4,7 +4,7 @@ project(app_mic_array)
 
 set(XMOS_SANDBOX_DIR    ${CMAKE_CURRENT_LIST_DIR}/../../..)
 
-set(APP_HW_TARGET src/XK-EVK-XU316-AIV.xn)
+set(APP_HW_TARGET XK-EVK-XU416)
 set(APP_DEPENDENT_MODULES "lib_mic_array")
 set(APP_INCLUDES    src)
 
@@ -14,7 +14,7 @@ set(APP_COMPILER_FLAGS
     -report
     -Wall
     -fxscope
-    -Wno-xcore-fptrgroup
+    # -Wno-xcore-fptrgroup
     # Mic array config
     -DMIC_ARRAY_CONFIG_SAMPLES_PER_FRAME=320
     -DMIC_ARRAY_CONFIG_MIC_COUNT=1
